--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <!-- search button  -->
     <section>
-      <div class="search-field w-50 mx-auto">
+      <div class="search-field w-50 mx-auto mt-5">
         <!--  <div class="search-box">
            <input id="input-field" class="search-field" type="text" />
            <button type="button" class="btn btn-primary search-button" data-toggle="button" aria-pressed="false"
@@ -39,8 +39,8 @@
     </section>
     
     <!-- dynamic product result  -->
-    <section class="container">
-      <div class="row">
+    <section class="container ">
+      <div class="row mt-5 pt-5">
         <div id="all-products"  class="col-md-4">
           
         </div>
@@ -49,11 +49,11 @@
 
      <!-- fixed  My cart section  -->
      <section>
-      <div class="col-md-3 col-lg-3 col-sm-5 cart-main  p-2">
+      <div class="col-md-3 col-lg-3 col-sm-5 cart-main p-2" id='cart-main'>
         <div class="cart" id="my-cart">
-          <table class="table">
+          <table class="table text-light">
             <thead>
-              <h1>My-Cart</h1>
+              <h1 class="text-light">My-Cart</h1>
               <tr>
                 <th scope="col"></th>
                 <th scope="col"></th>
