--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     
     <!-- dynamic product result  -->
     <section class="container ">
-      <div class="row mt-5 pt-5">
+      <div class="row mt-5 pt-5 mb-5">
         <div id="all-products"  class="col-md-4">
           
         </div>
@@ -75,19 +75,19 @@
                 <td></td>
               </tr>
               <tr>
-                <th >Delivery-Charge:</th>
+                <th >Delivery-Charge :</th>
                 <td >$ <span id="delivery-charge">20</span></td>
                 <td></td>
                 <td></td>
               </tr>
               <tr>
-                <th >Total-Tax:</th>
+                <th >Total-Tax :</th>
                 <td >$ <span id="total-tax">0</span></td>
                 <td></td>
                 <td></td>
               </tr>
               <tr>
-                <th scope="row" >Total</th>
+                <th scope="row" >Total :</th>
                 <td colspan="2" >$ <span id="total">0</span></td>
                 <td></td>
               </tr>
@@ -108,5 +108,4 @@
   <!-- add javascript  file  -->
   <script src="./js/app.js"></script>
 </body>
-
 </html>
